// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H3 should allow weight to be overridden 1`] = `
.glamor-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 14px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h3
  className="root glamor-0 glamor-1"
  color="navy700"
  onClick={undefined}
  size="small"
  style={Object {}}
>
  An H3 Tag
</h3>
`;

exports[`H3 should render shallow component ok 1`] = `
.glamor-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 600;
  font-size: 14px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h3
  className="root glamor-0 glamor-1"
  color="navy700"
  onClick={undefined}
  size="small"
  style={Object {}}
>
  An H3 Tag
</h3>
`;
